updated contract
